Fix skill text last line alignment

--- a/src/containers/skills/Skills.css
+++ b/src/containers/skills/Skills.css
@@ -47,7 +47,7 @@
   font-size: 20px;
   line-height: 1.45;
   text-align: justify;
-  text-align-last: justify;
+  text-align-last: left;
   text-justify: inter-word;
   padding-left: 18px;
   text-indent: -12px;
